[package]
name = "todo"
version = "0.2.0"
edition = "2021"
authors = ["Thomas C. Pijper"]
license = "MIT"
repository = "https://github.com/thomaspijper/todo"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
dirs = "5.0.1"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
